# project_creation_assistant

./: CONFIF_PROJECT.md  DJANGO.md  README.md  help.txt  pyproject.toml  ttime.txt
